# otto

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt  sample_text.csv
automl_results/: optuna_study.db
automl_results/processed_data/: metadata.json
configs/: base_config.yaml  search_spaces.yaml
data/: analyzer.py  loader.py  processor.py
inference/: generator.py
model_outputs/: training_history.json
models/: blocks.py  gpt.py  moe_gpt.py  registry.py
src/otto/: __init__.py  cli_runner.py  config.yaml  config_loader.py  inference.py  preprocess.py  trainer.py  upload_file.py
src/otto/cli/: cli.py
src/otto/data_loaders/: base_loader.py  csv_loader.py  dataframe_loader.py  json_loader.py  text_loader.py  tsv.py  unstructured_loader.py
src/otto/utils/: archives.py  file_detector.py  misc_utils.py  text_splitter.py
src/otto/utils/documents/: document_serializer.py  document_utils.py  file_processor.py  language_enum.py  processable.py
training/: hyperopt_manager.py  resource_tuner.py  trainer.py
training_data/: processing_stats.json
utils/: common.py  config_utils.py
